hovering over regions in "type (hard) (invisible)" no longer darkens them

--- a/app/static/css/gameSVG.css
+++ b/app/static/css/gameSVG.css
@@ -14,7 +14,7 @@ path {
     stroke: black;
 }
 
-path:hover {
+#svg-game:not(.invisible-mode) path:hover {
     filter: brightness( 0.9 );
 }
 path.clickable:active {
